# astionicbot-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dockerfile  entrypoint.sh
src/: macros.rs  main.rs
src/commands/: help.rs  mod.rs  restart.rs
src/commands/music/: clear.rs  eventhandller.rs  join.rs  leave.rs  mod.rs  nowplaying.rs  pause.rs  play.rs  queue.rs  resume.rs  say.rs  shuffle.rs  skip.rs  stop.rs
src/events/: message.rs  mod.rs  ready.rs
