[package]
name = "astionicbot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = ["client", "standard_framework", "voice", "cache"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
songbird = { version = "0.5.0", features = ["builtin-queue", "serenity"] }
rand = "0.9.1"
regex = "1.8.3"
dotenvy = "0.15.7"
poise = "0.6.1"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"] }
symphonia = {version = "0.5.4", features = ['pcm','mp3','wav','isomp4','aac','alac'] }

[profile.release]
strip = true

[[bin]]
name = "astionicbot"
path = "src/main.rs"